--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPassword.razor
@@ -4,23 +4,36 @@
 @inject IEmailSender<AppUser> EmailSender
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
+@layout EmptyBoxLayout
 
 <PageTitle>فراموشی رمز عبور</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true">رمز عبور خود را فراموشی کرده اید؟</MudText>
-<MudText Typo="Typo.body1" GutterBottom="true">ایمیل خود را وارد کنید</MudText>
+<MudStack AlignItems="AlignItems.Center">
+    <MudItem>
+        <MudImage Src="/assets/logo/logo512.png" Alt="Logo" Height="50" />
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h3" GutterBottom="true">گلدکس</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h5" GutterBottom="true">فراموشی رمز عبور</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Typo="Typo.body1">رمز عبور خود را فراموش كرده ايد؟ لطفا ايميل خود را در کادر زیر وارد کنید تا لینک بازنشانی رمز عبور برای شما ارسال شود</MudText>
+    </MudItem>
+</MudStack>
 
 <EditForm Model="Input" FormName="forgot-password" OnValidSubmit="OnValidSubmitAsync" method="post">
     <DataAnnotationsValidator />
 
-    <MudGrid>
-        <MudItem md="12">
+    <MudGrid Class="mt-2 mb-2">
+        <MudItem xs="12">
             <MudStaticTextField @bind-Value="Input.Email" For="@(() => Input.Email)"
-                                Label="ایمیل" Placeholder="name@example.com"
+                                Label="ایمیل" Placeholder="name@example.com" Variant="Variant.Outlined"
                                 UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "username" }, { "aria-required", "true" } } )" />
         </MudItem>
-        <MudItem md="12">
-            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">بازنشانی رمز عبور</MudStaticButton>
+        <MudItem xs="12">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">ارسال</MudStaticButton>
         </MudItem>
     </MudGrid>
 </EditForm>
@@ -38,8 +51,6 @@
             RedirectManager.RedirectTo(ClientRoutes.Accounts.ForgotPasswordConfirmation);
         }
 
-        // For more information on how to enable account confirmation and password reset please
-        // visit https://go.microsoft.com/fwlink/?LinkID=532713
         var code = await UserManager.GeneratePasswordResetTokenAsync(user);
         code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
         var callbackUrl = NavigationManager.GetUriWithQueryParameters(
@@ -53,7 +64,7 @@
 
     private sealed class InputModel
     {
-        [Required]
+        [Required(ErrorMessage = "لطفا {0} را وارد کنید")]
         [EmailAddress]
         public string Email { get; set; } = "";
     }
