--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPasswordConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPasswordConfirmation.razor
@@ -1,7 +1,23 @@
 ﻿@attribute [Route(ClientRoutes.Accounts.ForgotPasswordConfirmation)]
+@layout EmptyBoxLayout
 
 <PageTitle>تایید فراموشی رمز عبور</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true">تایید فراموشی رمز عبور</MudText>
+<MudStack AlignItems="AlignItems.Center">
+    <MudItem>
+        <MudImage Src="/assets/logo/logo512.png" Alt="Logo" Height="50" />
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h3" GutterBottom="true">گلدکس</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h5" GutterBottom="true">فراموشی رمز عبور</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Typo="Typo.body1">لطفا ایمیل خود را جهت بازنشانی رمز عبور چک کنید</MudText>
+    </MudItem>
 
-<MudText Typo="Typo.body1" GutterBottom="true">لطفا ایمیل خود را جهت بازنشانی رمز عبور چک کنید</MudText>
+    <MudItem xs="12">
+        <MudButton Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Primary" Href="@ClientRoutes.Accounts.Login">ورود به سامانه</MudButton>
+    </MudItem>
+</MudStack>
