--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidPasswordReset.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidPasswordReset.razor
@@ -1,8 +1,19 @@
 ﻿@attribute [Route(ClientRoutes.Accounts.InvalidPasswordReset)]
+@layout EmptyBoxLayout
 
-<PageTitle>بازنشانی نامعتبر رمز عبور</PageTitle>
+<PageTitle>لینک نامعتبر</PageTitle>
 
-<h1>بازنشانی نامعتبر رمز عبور</h1>
-<p role="alert">
-    لینک بازنشانی رمز عبور معتبر نیست
-</p>
+<MudStack AlignItems="AlignItems.Center">
+    <MudItem>
+        <MudImage Src="/assets/logo/logo512.png" Alt="Logo" Height="50" />
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h3" GutterBottom="true">گلدکس</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h5" GutterBottom="true">لینک بازنشانی رمز عبور نامعتبر است</MudText>
+    </MudItem>
+    <MudItem>
+        <MudButton Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Login" Color="Color.Primary" Href="@ClientRoutes.Accounts.Login">ورود به سامانه</MudButton>
+    </MudItem>
+</MudStack>
