--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPassword.razor
@@ -2,38 +2,58 @@
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<AppUser> UserManager
+@layout EmptyBoxLayout
+
 <PageTitle>بازنشانی رمز عبور</PageTitle>
 
-<h1>بازنشانی رمز عبور</h1>
-<h2>رمز خود را بازنشانی کنید</h2>
-<MudDivider />
-<div class="row">
-    <div class="col-md-4">
-        <StatusMessage Message="@Message" />
-        <EditForm Model="Input" FormName="reset-password" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
 
-            <input type="hidden" name="Input.Code" value="@Input.Code" />
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Email" id="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="Input.Email" class="form-label">ایمیل</label>
-                <ValidationMessage For="() => Input.Email" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.Password" id="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="رمز عبور جدید خود را وارد کنید" />
-                <label for="Input.Password" class="form-label">رمز عبور</label>
-                <ValidationMessage For="() => Input.Password" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="لطفا رمز جدید خود را تکرار کنید" />
-                <label for="Input.ConfirmPassword" class="form-label">تکرار رمز عبور</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">بازنشانی</button>
-        </EditForm>
-    </div>
-</div>
+<MudStack AlignItems="AlignItems.Center">
+    <MudItem>
+        <MudImage Src="/assets/logo/logo512.png" Alt="Logo" Height="50" />
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h3" GutterBottom="true">گلدکس</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h5" GutterBottom="true">بازنشانی رمز عبور</MudText>
+    </MudItem>
+</MudStack>
+
+<EditForm Model="Input" method="post" OnValidSubmit="OnValidSubmitAsync" FormName="reset-password">
+    <DataAnnotationsValidator />
+
+    <input type="hidden" name="Input.Code" value="@Input.Code" />
+
+    <MudGrid>
+        <MudItem xs="12">
+            <MudStaticTextField For="@(() => Input.Email)" @bind-Value="Input.Email"
+                                Label="آدرس ایمیل" Variant="Variant.Outlined"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "username" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem xs="12">
+            <MudStaticTextField For="@(() => Input.Password)" @bind-Value="Input.Password"
+                                Label="رمز عبور" InputType="InputType.Password" Variant="Variant.Outlined"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "current-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem xs="12">
+            <MudStaticTextField For="@(() => Input.ConfirmPassword)" @bind-Value="Input.ConfirmPassword"
+                                Label="تکرار رمز عبور" InputType="InputType.Password" Variant="Variant.Outlined"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "confirm-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        @if (!string.IsNullOrEmpty(Message))
+        {
+            <MudItem xs="12" Class="mb-0">
+                <StatusMessage Message="@Message" Severity="Severity.Error" />
+            </MudItem>
+        }
+
+        <MudItem xs="12" Class="mt-0">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">بازنشانی رمز عبور</MudStaticButton>
+        </MudItem>
+    </MudGrid>
+</EditForm>
+
+
 @code {
     private IEnumerable<IdentityError>? _identityErrors;
 
@@ -49,7 +69,7 @@
     {
         if (Code is null)
         {
-            RedirectManager.RedirectTo("Account/InvalidPasswordReset");
+            RedirectManager.RedirectTo(ClientRoutes.Accounts.InvalidPasswordReset);
         }
 
         Input.Code = Encoding.UTF8.GetString(WebEncoders.Base64UrlDecode(Code));
@@ -61,13 +81,13 @@
         if (user is null)
         {
             // Don't reveal that the user does not exist
-            RedirectManager.RedirectTo("Account/ResetPasswordConfirmation");
+            RedirectManager.RedirectTo(ClientRoutes.Accounts.ResetPasswordConfirmation);
         }
 
         var result = await UserManager.ResetPasswordAsync(user, Input.Code, Input.Password);
         if (result.Succeeded)
         {
-            RedirectManager.RedirectTo("Account/ResetPasswordConfirmation");
+            RedirectManager.RedirectTo(ClientRoutes.Accounts.ResetPasswordConfirmation);
         }
 
         _identityErrors = result.Errors;
@@ -75,11 +95,11 @@
 
     private sealed class InputModel
     {
-        [Required]
+        [Required(ErrorMessage = "لطفا {0} را وارد کنید")]
         [EmailAddress]
         public string Email { get; set; } = "";
 
-        [Required]
+        [Required(ErrorMessage = "لطفا {0} را وارد کنید")]
         [StringLength(100, ErrorMessage = "طول {0} حداقل باید {2} و حداکثر {1} حرف باشد.", MinimumLength = 6)]
         [DataType(DataType.Password)]
         public string Password { get; set; } = "";
