--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPasswordConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPasswordConfirmation.razor
@@ -1,8 +1,20 @@
 ﻿@attribute [Route(ClientRoutes.Accounts.ResetPasswordConfirmation)]
+@layout EmptyBoxLayout
 
 <PageTitle>تایید بازنشانی رمز عبور</PageTitle>
 
-<h1>تایید بازنشانی رمز عبور</h1>
-<p role="alert">
-    رمز عبور شما بازنشانی شد. لطفا برای ورود <a href="Account/Login">کلیک کنید</a>.
-</p>
+
+<MudStack AlignItems="AlignItems.Center">
+    <MudItem>
+        <MudImage Src="/assets/logo/logo512.png" Alt="Logo" Height="50" />
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h3" GutterBottom="true">گلدکس</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h5" GutterBottom="true">تایید بازنشانی رمز عبور</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.body1" GutterBottom="true">رمز عبور شما بازنشانی شد. لطفا برای ورود <MudLink Href="@ClientRoutes.Accounts.Login">کلیک کنید</MudLink>.</MudText>
+    </MudItem>
+</MudStack>
