--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidUser.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidUser.razor
@@ -1,7 +1,19 @@
 ﻿@attribute [Route(ClientRoutes.Accounts.InvalidUser)]
+@layout EmptyBoxLayout
 
 <PageTitle>کاربر نامعتبر</PageTitle>
 
-<h3>کاربر نامعتبر</h3>
-
-<StatusMessage />
+<MudStack AlignItems="AlignItems.Center">
+    <MudItem>
+        <MudImage Src="/assets/logo/logo512.png" Alt="Logo" Height="50" />
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h3" GutterBottom="true">گلدکس</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Align="Align.Center" Typo="Typo.h5" GutterBottom="true">کاربر نامعتبر</MudText>
+    </MudItem>
+    <MudItem>
+        <MudText Typo="Typo.body1">کاربری با این مشخصات یافت نشد</MudText>
+    </MudItem>
+</MudStack>
